--- a/Q_and_A/1.md
+++ b/Q_and_A/1.md
@@ -1,7 +1,6 @@
-## 我们这个世界的意义是什么  
+* 我们这个世界的意义是什么  
 
-在我们的世界这是一个错误的问题。在我们的世界层面上的意义不能独立于世界而存在。  
-
-我们认为的“意义”是一个事物存在的目的和影响内容。要有“意义” 就首先要有这种广义的目的性。而要有目的性就要有因果，有先后，有时间。由此，意义就不能独立于时间而存在。而我们的世界是四维时空和其中物质的总称，脱离了这个世界也就没有我们世界的时间。这样讨论意义也就没有意义了。
+  在我们的世界这是一个错误的问题。在我们的世界层面上的意义不能独立于世界而存在。  
+  我们认为的“意义”是一个事物存在的目的和影响内容。要有“意义” 就首先要有这种广义的目的性。而要有目的性就要有因果，有先后，有时间。由此，意义就不能独立于时间而存在。而我们的世界是四维时空和其中物质的总称，脱离了这个世界也就没有我们世界的时间。这样讨论意义也就没有意义了。
 
 
