--- a/Prac sci phil/1.md
+++ b/Prac sci phil/1.md
@@ -1,4 +1,23 @@
 这个文件包含了一种当前科学允许的比较科学的哲学讨论
 
+人的能力是有限的
+
+人的认识是由人的立场而来的，与世界本身性质无关
+
+认识过程有两个基本操作：
+1. 实践  
+   实践就是相互作用，实验，获取信息的过程。是不分主客的。
+
+2. 思维  
+   思维就是对获取的信息的分析与加工，是区分主客的。
+
+意义就是造成影响（to be）  
+一个概念的具体内容是“意思”而不是“意义”
+
+
+# 一些假设
+
+## 人的认识能力是有限度的
+
 # 世界和人关系的讨论
 
